<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:padding="20dp"
            android:textSize="24dp"
            android:text="@string/register_title" />

        <EditText
            android:id="@+id/txt_productName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/product_name_hint"
            android:inputType="text"
            android:padding="25dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txt_productDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/product_description_hint"
            android:inputType="textMultiLine"
            android:padding="25dp" />

        <EditText
            android:id="@+id/txt_productPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/product_price_hint"
            android:inputType="number|numberDecimal"
            android:padding="25dp"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_marginLeft="17dp"
                    android:layout_marginRight="15dp"
                    android:textSize="18dp"
                    android:text="@string/product_photo_hint" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/btn_camera"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_camera" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_photoImg"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:textSize="20dp"
            android:text="@string/contact_title" />

        <EditText
            android:id="@+id/txt_contactName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/contact_name"
            android:inputType="textPersonName"
            android:padding="25dp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/txt_contactPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/contact_phone"
            android:inputType="phone"
            android:padding="25dp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="15dp"
            android:text="@string/register_button_submit"/>

    </LinearLayout>

</ScrollView>
